# rl-supcon-chess

./: .gitignore  Cargo.toml  pyproject.toml
config/: default.toml
engine/: Cargo.toml
engine/src/: board.rs  lib.rs  policy.rs  selfplay.rs
engine/src/mcts/: mod.rs  node.rs  parallel.rs  search.rs  transposition.rs
engine/src/nn/: inference.rs  layers.rs  mod.rs  simd.rs  weights.rs
python/: Cargo.toml
python/src/: lib.rs
scripts/: benchmark.py  play.py  train.py
training/: config.py  data.py  export.py  model.py  schedule.py  selfplay_gpu.py  supcon.py  trainer.py
